src/styles/lck/_datatables.scss
// Datatables

.p-editable-column {
  min-width: 5rem;
}

.cell-state {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: block;
  padding: 0.5rem;
  pointer-events: none;

  &.saving,
  &.saved {
    &:before {
      position: absolute;
      bottom: 0;
      left: 0;
      display: flex;
      width: 100%;
      height: 1px;
      content: "";
    }
  }

  &.saved {
    padding-right: 20px;

    &.error {
      color: red;

      &:before {
        background-color: red;
      }

      &:after {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 1px;
        display: inline-flex;
        float: right;
        width: 16px;
        padding: 0 5px;
        content: '';
        color: red;
        background-color: rgba(256, 256, 256, 0.8);
        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='512' height='512' viewBox='0 0 485.811 485.811' enable-background='new 0 0 512 512'%3E%3Cpath d='M476.099 353.968l-170.2-294.8c-27.8-48.7-98.1-48.7-125.8 0l-170.3 294.8c-27.8 48.7 6.8 109.2 62.9 109.2h339.9c56.1 0 91.3-61.1 63.5-109.2zm-233.2 43.8c-14.8 0-27.1-12.3-27.1-27.1s12.3-27.1 27.1-27.1 27.1 12.3 26.5 27.8c.7 14.1-12.3 26.4-26.5 26.4zm24.7-175.2c-1.2 21-2.5 41.9-3.7 62.9-.6 6.8-.6 13-.6 19.7-.6 11.1-9.3 19.7-20.4 19.7s-19.7-8-20.4-19.1c-1.8-32.7-3.7-64.8-5.5-97.5-.6-8.6-1.2-17.3-1.9-25.9 0-14.2 8-25.9 21-29.6 13-3.1 25.9 3.1 31.5 15.4 1.9 4.3 2.5 8.6 2.5 13.6-.6 13.7-1.9 27.3-2.5 40.8z' fill='%23f73232' data-original='%23000000' xmlns='http://www.w3.org/2000/svg'/%3E%3C/svg%3E");
        background-repeat: no-repeat;
        background-position: center;
        background-size: 16px;
      }
    }

    &.valid {
      &:before {
        background-color: green;
      }
    }
  }

  &.saving {
    overflow: hidden;
    cursor: wait;
    color: #666666;

    &:after {
      position: absolute;
      right: 0;
      bottom: 0;
      left: 0;
      display: flex;
      width: 100%;
      height: 4px;
      content: '';
      animation: saving 4.2s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
      background-color: #cccccc;
      will-change: left, right;
    }
  }
}
@-webkit-keyframes saving {
  0% {
    left: -35%;
    right: 100%;
  }
  60% {
    left: 100%;
    right: -30%;
  }
  100% {
    left: 100%;
    right: -100%;
  }
}

.p-datatable.p-datatable-gridlines .p-datatable-thead > tr > td,
.p-datatable.p-datatable-gridlines .p-datatable-thead > tr > th {
  border-width: 0 0 0 0;
}

.p-datatable .p-column-resizer {
  width: .25rem;
  height: calc(100% - .4rem);
  margin: .2rem 0;
  border: unset;
  border-radius: var(--border-radius);
}

.p-datatable .p-column-resizer::before {
  display: inline-block;
  width: .5rem;
  height: 100%;
  margin-left: -.5rem;
  content: '';
  background-color: transparent;
}

.p-datatable .p-column-resizer:hover {
  background-color: var(--primary-color);
}

.p-datatable-wrapper,
.p-datatable-scrollable-wrapper {
  .p-datatable-thead {
    > tr > th {
      font-weight: normal;
      align-items: center;
      color: var(--primary-color-text);
      background-color: #ededed;
    }
  }
}

.p-datatable.p-datatable-sm .p-datatable-thead > tr > th {
  padding: 0.5rem 0rem 0.25rem 0.5rem;
}

.p-datatable.p-datatable-sm .p-datatable-thead > tr > th.p-sortable-column {
  margin-right: 1.75rem;
  padding: 0.5rem 1.75rem 0.25rem 0.5rem;
}

.p-datatable.p-datatable-sm .p-datatable-thead > tr > th div.th-container {
  position: relative;
  display: inline-block;
  width: 100%;
}

.p-datatable.p-datatable-sm .p-datatable-thead > tr > th div.th-container span.th-text {
  display: inline-block;
  overflow: hidden;
  width: calc(100% - 1rem);
  text-overflow: ellipsis;
  background-color: inherit;
}

.p-datatable-wrapper {
  table {
    position: relative;
  }

  .p-datatable-thead {
    th {
      position: sticky;
      z-index: 10;
      top: 0;

      &.sticky-column-cells {
        z-index: 11;
        left: 0;
      }
    }
  }
}

td.sticky-column-cells {
  background-color: rgba(256, 256, 256, 0.9) !important;

  button {
    &:hover {
      background-color: rgba(33, 150, 243, 0.04);
    }

    &:disabled {
      opacity: 0.6;
      border: none;

      &:hover {
        border: none;
        background-color: transparent;
      }
    }
  }
}

.p-datatable .p-datatable-thead > tr > th,
.p-datatable .p-datatable-thead > tr > td {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.p-datatable {
  &.p-datatable-striped {
    .p-datatable-tbody > tr:nth-child(1n) {
      color: var(--primary-color-text);
      background-color: rgba(255, 255, 255, 0.8);
    }

    &.editable-cell-table {
      .p-datatable-wrapper {
        overflow: visible; // this property unleash the power of the select or datepicker
      }
    }

    .p-datatable-tbody > tr:nth-child(2n) {
      color: var(--primary-color-text);
      background-color: #ededed;
    }
  }

  .p-datatable-tbody tr {
    background-color: rgba(255, 255, 255, 0.8);
  }

  .p-datatable-tbody > tr > td {
    overflow: hidden;
    overflow-y: visible;
    white-space: nowrap;
    text-overflow: ellipsis;
  }

  .p-datatable-tbody > tr > td.p-editable-column.p-cell-editing {
    overflow: visible;
    border: unset;
  }

  .p-sortable-column {
    &:focus {
      box-shadow: unset;
    }

    .p-sortable-column-icon {
      position: absolute;
      z-index: 1;
      right: 5px;
      padding: 0.1rem;
      color: var(--primary-color-darken);

      &.pi::before {
        font-size: 0.8rem !important;
      }
    }

    &.p-highlight {
      color: var(--primary-color-darken);

      .p-sortable-column-icon {
        color: var(--primary-color-darken);
        background-color: transparent;
      }

      &:hover {
        color: var(--primary-color-darken);
        .p-sortable-column-icon {
          color: var(--primary-color-darken);
          background-color: #ebebeb;
        }
      }
    }
  }
}

.p-cell-editing {
  padding: 0 !important;

  input {
    &.p-inputtext {
      border-radius: 0;

      &:enabled,
      &:focus {
        border: 1px solid var(--primary-color);
        box-shadow: unset;
      }
    }
  }

}

// Datatables responsive

.p-datatable-responsive .p-datatable-tbody > tr > td .p-column-title {
  display: none;
}

@media screen and (max-width: 900px) {
  .p-datatable {
    &.p-datatable-responsive {
      &.editable-cell-table {
        overflow-y: visible;
      }

      .p-datatable-thead > tr > th,
      .p-datatable-tfoot > tr > td {
        display: none !important;
      }

      .p-datatable-tbody > tr > td {
        display: block;
        float: left;
        clear: left;
        width: 100%;
        text-align: left;
        border: 0 none;

        .p-column-title {
          font-weight: bold;
          display: inline-block;

          min-width: 40%;
          margin: -.4em 1em -.4em -.4rem;
          padding: .4rem;
        }

        &:last-child {
          border-bottom: 1px solid var(--surface-d);
        }
      }
    }
  }
}

